--- a/src/components/AddRecipt/style.css
+++ b/src/components/AddRecipt/style.css
@@ -1,10 +1,8 @@
-.container {
+.container-recipt {
   max-width: 32rem;
   margin: 0 auto;
   background: white;
-  padding: 1.5rem;
-  border-radius: 0.5rem;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 1rem;
 }
 
 .header {
@@ -66,9 +64,10 @@
 }
 .half-width {
   width: 50%;
+  text-align: left;
 }
 
-.dropdown {
+.dropdown-l {
   width: 100%;
   padding: 1rem 0;
   border: 0;
@@ -78,7 +77,7 @@
  
 }
 
-/* File Upload */
+
 .file-upload {
   border: 2px dashed #6c5ce7;
   padding: 20px;
