--- a/src/components/PaymentDetails/style.css
+++ b/src/components/PaymentDetails/style.css
@@ -8,12 +8,35 @@
   margin: auto;
 }
 
-.payment-header {
-  color: #6c5ce7;
-  text-align: center;
-  margin-bottom: 15px;
-  font-size: 1.2rem;
+
+.payment-sub-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 0;
 }
+
+.payment-title {
+  font-size: 18px;
+  font-weight: bold;
+  color: #6c5ce7;
+  margin: 0 22px;
+}
+
+.nav-button {
+  background-color: rgba(128, 128, 255, 0.1); 
+  border: none;
+  border-radius: 8px;
+  padding: 8px 12px;
+  cursor: pointer;
+  font-size: 16px;
+  color: #613bdb; 
+}
+
+.nav-button:hover {
+  background-color: rgba(128, 128, 255, 0.3);
+}
+
 
 .form-group {
   display: flex;
@@ -65,6 +88,30 @@ textarea {
   cursor: pointer;
 }
 
+.stepper-dots {
+  display: flex;
+  gap: 6px;
+  margin: 0 60px;
+}
+
+.bottom-border {
+  border-bottom: 1px solid #ddd;
+  margin-top: 12px;
+}
+
+.dot {
+  width: 8px;
+  height: 8px;
+  background-color: #ccc;
+  border-radius: 50%;
+
+}
+
+.dot.active {
+  background-color: #613bdb; 
+  width: 10px;
+  height: 10px;
+}
 .action-buttons {
   display: flex;
   flex-direction: column;
